; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_voltexture_create.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_voltexture_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32* (i32, i32, i32, i32, i32, i32, i32**, i32)* }

@thread_graphics = common dso_local global %struct.TYPE_5__* null, align 8
@.str = private unnamed_addr constant [21 x i8] c"gs_voltexture_create\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @gs_voltexture_create(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32** %5, i32 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32**, align 8
  %15 = alloca i32, align 4
  %16 = alloca %struct.TYPE_5__*, align 8
  store i32 %0, i32* %9, align 4
  store i32 %1, i32* %10, align 4
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32** %5, i32*** %14, align 8
  store i32 %6, i32* %15, align 4
  %17 = load %struct.TYPE_5__*, %struct.TYPE_5__** @thread_graphics, align 8
  store %struct.TYPE_5__* %17, %struct.TYPE_5__** %16, align 8
  %18 = call i32 @gs_valid(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %21, label %20

20:                                               ; preds = %7
  store i32* null, i32** %8, align 8
  br label %37

21:                                               ; preds = %7
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i32 0, i32 1
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  %25 = load i32* (i32, i32, i32, i32, i32, i32, i32**, i32)*, i32* (i32, i32, i32, i32, i32, i32, i32**, i32)** %24, align 8
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 8
  %29 = load i32, i32* %9, align 4
  %30 = load i32, i32* %10, align 4
  %31 = load i32, i32* %11, align 4
  %32 = load i32, i32* %12, align 4
  %33 = load i32, i32* %13, align 4
  %34 = load i32**, i32*** %14, align 8
  %35 = load i32, i32* %15, align 4
  %36 = call i32* %25(i32 %28, i32 %29, i32 %30, i32 %31, i32 %32, i32 %33, i32** %34, i32 %35)
  store i32* %36, i32** %8, align 8
  br label %37

37:                                               ; preds = %21, %20
  %38 = load i32*, i32** %8, align 8
  ret i32* %38
}

declare dso_local i32 @gs_valid(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
